# general-dynamics-take-home

./: README.md  pyproject.toml
results/: log.html  output.xml  report.html
src/: config.yaml
src/TestSuites/: Login.robot
src/keywords/: allure.resource  browser.resource  configLoader.resource
src/keywords/PageObect/: HomePage.resource  LoginPage.resource
src/output/allure/: 000fba25-939f-4e61-8ec8-9559f9c255c3-container.json  114cec8b-3dc3-484a-9f52-ea62a4f30077-attachment.html  1338a17f-4384-4a97-b86f-1ba0ac0583b2-container.json  142c9f5e-d63c-42c7-895c-551bb8acb87c-container.json  1857daf0-197e-4d5c-a06a-dd0945b211fa-attachment.html  1af95f42-bc0d-4b5b-b47a-ef57c9f3c497-container.json  1d35a31c-d00d-466f-a947-50a8fe733679-attachment.html  207d09ac-2a6f-4fa7-a92a-7579e88a6893-container.json  276b8a16-111d-4176-8e6e-a7eed3a5590f-attachment.html  2816ade1-cb5d-4353-a4c4-b74d96b8dad3-attachment.html  38345baa-a4e1-4182-aadb-216c918414bf-attachment.html  41f4c04b-8e6f-4702-8c52-09d4220d3e16-attachment.html  4298f769-b36a-4886-9b1b-93b9459c7b83-attachment.html  472d72a0-969b-4f31-b474-8d432a195f6a-result.json  48fb5526-38df-4e5d-8e45-9471a0ccbe7a-container.json  4a4ed69a-f236-4364-8473-b2980bc2cebc-attachment.html  4ec1f488-6566-44f8-b2eb-220ecb2f4f4b-attachment.html  6dd08519-364c-46b2-b758-bd565767d664-container.json  6e02e53a-5b73-4e83-a298-cad54c88864e-attachment.html  73540dbc-9abf-433d-b7b1-784d7353acd7-result.json  79ff8823-f48c-4d22-90a8-6167dc100463-attachment.html  8e3fde44-39eb-4d63-9017-2fa6b03d98f5-result.json  (+13 more)
(+2 files in other folders)
